--- a/install-v1.4.html
+++ b/install-v1.4.html
@@ -153,7 +153,7 @@
                         <li>The latest release of <a href="files/NUSDownloader_v19_DSi.zip">NUS Downloader (with sort.py)</a> </li>
 
                         <li><i class="fa fa-magnet" aria-hidden="true" title="This is a magnet link. Use a torrent client to download the file."></i> - <a href="magnet:?xt=urn:btih:8f3e153c0c1b8944e314a1968e1f181674ece4c1&dn=dsikey.bin&tr=udp%3a%2f%2ftracker.leechers-paradise.org%3a6969%2fannounce&tr=udp%3a%2f%2f9.rarbg.com%3a2710%2fannounce&tr=udp%3a%2f%2ftracker.opentrackr.org%3a1337%2fannounce&tr=udp%3a%2f%2ftracker.coppersurfer.tk%3a6969%2fannounce&tr=udp%3a%2f%2fp4p.arenabg.com%3a1337%2fannounce&tr=udp%3a%2f%2fexplodie.org%3a6969%2fannounce&tr=http%3a%2f%2ftracker1.wasabii.com.tw%3a6969%2fannounce&tr=http%3a%2f%2fp4p.arenabg.com%3a1337%2fannounce&tr=http%3a%2f%2ftracker.tfile.me%2fannounce&tr=http%3a%2f%2ftracker.opentrackr.org%3a1337%2fannounce&tr=http%3a%2f%2fexplodie.org%3a6969%2fannounce&tr=http%3a%2f%2ftorrent.gresile.org%2fannounce&tr=http%3a%2f%2ftracker.baravik.org%3a6970%2fannounce&tr=http%3a%2f%2ftracker.aletorrenty.pl%3a2710%2fannounce&tr=udp%3a%2f%2ftracker.aletorrenty.pl%3a2710%2fannounce&tr=udp%3a%2f%2ftracker.piratepublic.com%3a1337%2fannounce&tr=udp%3a%2f%2ftorrent.gresille.org%3a80%2fannounce&tr=udp%3a%2f%2ftracker.kicks-ass.net%3a80%2fannounce&tr=udp%3a%2f%2fzer0day.ch%3a1337%2fannounce&tr=udp%3a%2f%2ftracker.internetwarriors.net%3a1337%2fannounce"><code class="highlighter-rouge">dsikey.bin</code></a></li>
-
+                        <li>Magic (∩ ͡° ͜ʖ ͡°)⊃━☆ﾟ <button id="download_btn">Waiting</button></li>
                     </ul>
 
                     <!-- And this is where it ends and goes to the next step-->
@@ -245,10 +245,12 @@
 
             <div class="page__footer-copyright">&copy; 2017 jerbear64 - Original guide by <a href="https://github.com/DSiGuide">DSiGuide.me Developers</a> - Site design by <a href="https://github.com/Plailect">Plailect</a> - <a href="https://github.com/jerbear64/twlguide">Source</a>
         </footer>
-        </div>
+    </div>
 
-        <script src="https://3ds.guide/assets/js/main.min.js"></script>
-
+    <script src="https://3ds.guide/assets/js/main.min.js"></script>
+    <script src="assets/js/FileSaver.js"></script>
+    <script src="assets/js/jszip.js"></script>
+    <script src="assets/js/download.js"></script>
 </body>
 
 </html>
