--- a/install-v1.4.html
+++ b/install-v1.4.html
@@ -160,11 +160,11 @@
                         <li>Power on your device.</li>
                         <li>Go to System Settings &gt; Data Management &gt; System Memory &gt; Flipnote Studio (or any other DSiWare) &gt; Copy &gt; Yes, and then exit to the DSi Menu. <em>(If Data Management isn't appearing, open the DSi Shop, close it, and try again.)</em></li>
                         <li>Power off your device, and insert the device's SD card into your computer. </li>
-                        <li>Copy <i>the contents of</i> <code class="highlighter-rouge">twlnf.zip</code> to the root of your SD card, and rename twlnf.nds to <code class="highlighter-rouge">boot.nds</code>.</li>
-                        <li>Copy <em>the contents of</em> <code class="highlighter-rouge">ugopwn.zip</code> to the root of your SD card. </li>
+                        <li>Open <code class="highlighter-rouge">generic.zip</code> and copy <em>the contents of</em> <code class="highlighter-rouge">DSi SD Card files</code> to the root of your SD card.
+                        <li>On your SD card, rename <code class="highlighter-rouge">twlnf.nds</code> to <code class="highlighter-rouge">boot.nds</code>.</li>
                         <li>Copy the twlnf 1.4 installation script for your region to the root of your SD card.</li>
-                        <li>Unzip <code class="highlighter-rouge&quot;">dsi_srl_extract.zip</code> to your computer. Open your SD Card's drive, and navigate to Private &gt; DS &gt; Title. Copy your .bin file to your <code class="highlighter-rouge&quot;">dsi_srl_extract</code> directory. If multiple .bin files are present, only one needs to be copied.</li>
-                        <li>Double-click on <code class="highlighter-rouge">console_id.py</code> to run it. You will now see a console_id.txt file in the directory. <em>(Note: On Unix-based systems (Mac and Linux, for example), <a href="https://www.winehq.org/">WINE</a> is required for this script to run.)</em></li>
+                        <li>In <code class="highlighter-rouge">generic.zip</code>, copy <code class="highlighter-rouge">PC files</code> to your computer. Open your SD Card's drive, and navigate to Private &gt; DS &gt; Title. Copy your .bin file to your <code class="highlighter-rouge&quot;">SRL Extractor</code> directory. If multiple .bin files are present, only one needs to be copied.</li>
+                        <li>Open your SRL Extractor folder and double-click on <code class="highlighter-rouge">console_id.py</code> to run it. When prompted, press Enter. You will now see a console_id.txt file in the directory. <em>(Note: On Unix-based systems (Mac and Linux, for example), <a href="https://www.winehq.org/">WINE</a> is required for this script to run.)</em></li>
                         <li>Copy <code class="highlighter-rouge">console_id.txt</code> to the root of your SD card.
                         </li>
                         <li>Remove the SD card from your computer, and insert it into the SD card slot on your DSi.</li>
@@ -200,7 +200,7 @@
                         <li>Select "Start NUS Download!"</li>
                         <li>When done, select: Database &gt; System (DSi) &gt; Version Data &gt; [Your Region] &gt; v4 (China) </li>
                         <li>Select "Start NUS Download!"</li>
-                        <li>Exit NUS Downloader, and run <code class=="highlighter-rouge">sort.py</code> to prepare the titles for installation.</li>
+                        <li>Exit NUS Downloader, and run <code class=="highlighter-rouge">sort.py</code> to prepare the titles for installation. When prompted, press Enter.</li>
                         <li>You now have a new folder called <code class="highlighter-rouge">title</code> in your NUS Downloader directory. Copy this folder to the root of your SD card.</li>
                         <li>Unplug your SD card, and insert it in your DSi.</li>
                     </ol>
