--- a/install-v1.4.html
+++ b/install-v1.4.html
@@ -148,7 +148,7 @@
                         <li>A twlnf firmware v1.4 installation script for your region (<a href="files/install-1.4-USA.nfs">USA</a> or <a href="files/install-1.4-EUR.nfs">EUR</a>)</li>
                         <li>The latest release of <a href="https://www.python.org/downloads/">Python 3</a></li>
                         <li data-name="nusdownloader">The latest release of <a href="files/NUSDownloader.zip">NUS Downloader (with sort.py)</a> </li>
-                        <li>Magic (∩ ͡° ͜ʖ ͡°)⊃━☆ﾟ <button id="download_btn">Waiting</button></li>
+                        <li>Magic (∩ ͡° ͜ʖ ͡°)⊃━☆ﾟ<button id="download_btn">Waiting... (Please enable Javascript, this is an download consolidator!)</button></li>
                     </ul>
 
                     <!-- And this is where it ends and goes to the next step-->
