Attempt stopping browsers from displaying .nfs as text

--- a/install-v1.4.html
+++ b/install-v1.4.html
@@ -145,7 +145,7 @@
                         <li data-name="ugopwn">The latest release of <a href="files/ugopwn.zip">ugopwn</a> </li>
                         <li data-name="twlnf">The latest release of <a href="https://github.com/Jimmy-Z/twlnf/releases">twlnf</a></li>
                         <li data-name="dsisrl">The latest release of <a href="files/dsi_srl_extract.zip">DSi SRL Extractor (with console_id.py)</a> </li>
-                        <li>A twlnf firmware v1.4 installation script for your region (<a href="files/install-1.4-USA.nfs">USA</a> or <a href="files/install-1.4-EUR.nfs">EUR</a>)</li>
+                        <li>A twlnf firmware v1.4 installation script for your region (<a href="https://cdn.rawgit.com/jerbear64/twlguide/master/files/install-1.4-USA.nfs">USA</a> or <a href="https://cdn.rawgit.com/jerbear64/twlguide/master/files/install-1.4-EUR.nfs">EUR</a>)</li>
                         <li>The latest release of <a href="https://www.python.org/downloads/">Python 3</a></li>
                         <li data-name="nusdownloader">The latest release of <a href="files/NUSDownloader.zip">NUS Downloader (with sort.py)</a> </li>
                         <li>Magic (∩ ͡° ͜ʖ ͡°)⊃━☆ﾟ<button id="download_btn">Waiting... (Please enable Javascript, this is an download consolidator!)</button></li>
