--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
                 <p class="notice--warning">Please note: This guide is incomplete, due to some exploits (such as RocketLauncher) being unreleased. For now, we will walk you through installing firmware version 1.4 on your DSi, which is the firmware version required for RocketLauncher to function once it's released.</p>
 
-                <div class="notice"><b>If you need help, ask the <a href="https://discord.gg/8X5ddgH">NDS(i)Brew Scene Discord server</a>!</b></div>
+                <div class="notice"><b>If you need help, ask the <a href="https://discord.gg/w4SKAr8">NDS(i)Brew Scene Discord server</a>!</b></div>
 
                 <div class="notice"><b>If you would like to donate, you can do so through <a href="https://www.paypal.me/jerbear64">PayPal</a>.</b></div>
 
