--- a/install-entrypoint-(sudokuhax).html
+++ b/install-entrypoint-(sudokuhax).html
@@ -137,7 +137,7 @@
                     <p class="notice--warning">Make sure you have followed the <a href="get-started.html">Getting Started</a> page before proceeding.</p>
                     </p>
                     <div class="notice--danger">There is a risk of bricking. Please ensure that all steps are followed correctly, and keep the NAND backup we have already created in a safe place.</div>
-
+                    <div class="notice--danger">Ensure that your DSi has at least 30 blocks free before proceeding or you WILL brick! This can be found in Settings -> Data Management -> System Memory.</div>
                     <h3 id="what-you-need">What you need</h3>
 
                     <ul id="files">
