--- a/install-entrypoint.html
+++ b/install-entrypoint.html
@@ -132,7 +132,7 @@
                     <div class="notice--danger">There is a risk of bricking. Please ensure that all steps are followed correctly, and keep the NAND backup we will create in a safe place.</div>
 
                     <h3 id="methods">Methods</h3>
-                    <p>If you already have one of the following titles, follow the <b>Installing a Permanent Entrypoint (already owned title)</b> guide, which contains twlnf scripts to install the hacked save.</p>
+                    <p>If you already have one of the following titles, follow the <b>Installing a Permanent Entrypoint (pre-owned title)</b> guide, which contains twlnf scripts to install the hacked save.</p>
 		    <ul>
 			  <li>“Fieldrunners”</li>
  			  <li>“Legends of Exidia”</li>
@@ -140,7 +140,7 @@
  			  <li>“The Legend of Zelda: Four Swords Anniversary”</li>
 		    </ul>
 		    	
-                    <p class="notice--primary">Continue to <a href=install-entrypoint-(preowned-title).html>Installing a Permanent Entrypoint (already owned title)</a></p>
+                    <p class="notice--primary">Continue to <a href=install-entrypoint-(preowned-title).html>Installing a Permanent Entrypoint (pre-owned title)</a></p>
 		    <hr>
 
 		    <p> Otherwise, follow the <b>Installing a Permanent Entrypoint (sudokuhax)</b> guide, which will install an older version of Sudoku, as well as a corresponding hacked save.</p>
