Add magnet notice

--- a/install-entrypoint-(sudokuhax).html
+++ b/install-entrypoint-(sudokuhax).html
@@ -138,6 +138,7 @@
                     </p>
                     <div class="notice--danger">There is a risk of bricking. Please ensure that all steps are followed correctly, and keep the NAND backup we have already created in a safe place.</div>
                     <div class="notice--danger">Ensure that your DSi has at least 30 blocks free before proceeding or you WILL brick! This can be found in Settings -> Data Management -> System Memory.</div>
+                    <p>To use the <a href="https://en.wikipedia.org/wiki/Magnet_URI_scheme">magnet</a> links on this page, you will need a torrent client like <a href="http://dev.deluge-torrent.org/wiki/Download">Deluge</a>.</p>
                     <h3 id="what-you-need">What you need</h3>
 
                     <ul id="files">
