--- a/get-started.html
+++ b/get-started.html
@@ -153,7 +153,7 @@
                     <ol>
                         <li>Insert your system's SD card into your computer.</li>
                         <li>Copy <em>the contents of</em> <code class="highlighter-rouge">ugopwn.zip</code> to the root of your SD card.</li>
-                        <li>Copy <em>the contents of</em> <code class="highlighter-rouge">twlnf-(version).7z</code> to the root of your SD card, and rename <code class="highlighter-rouge">twlnf.nds</code> to <code class="highlighter-rouge">boot.nds.</code></li>
+                        <li>Copy <em>the contents of</em> <code class="highlighter-rouge">twlnf-(version).7z</code> to the root of your SD card, and rename <code class="highlighter-rouge">twlnf.nds</code> to <code class="highlighter-rouge">boot.nds</code.></li>
                     </ol>
 
                     <p class="notice--primary">If you are interested in downgrading your DSi's firmware to v1.4 to prepare for RocketLauncher, continue to <a href=install-v1.4.html>Installing v1.4</a>.</p>
