--- a/install-entrypoint-(preowned-title).html
+++ b/install-entrypoint-(preowned-title).html
@@ -137,7 +137,7 @@
                     <p class="notice--warning">Make sure you have followed the <a href="get-started.html">Getting Started</a> page before proceeding.</p>
                     <p class="notice--warning">4swordshax, like ugopwn, cannot run commercial NDS titles from SRLoader at this time.</p>
                     </p>
-                    <div class="notice--danger">There is a risk of bricking. Please ensure that all steps are followed correctly, and keep the NAND backup we have already created in a safe place.</div>
+                    <div class="notice--danger">There is a risk of bricking. Please ensure that all steps are followed correctly, and keep the NAND backup we will create in a safe place.</div>
 
                     <h3 id="what-you-need">What you need</h3>
 
@@ -168,7 +168,8 @@
                         <li>Click on the single right arrow (the next to last arrow icon) two times. You will see a new frame be created. </li>
                         <li>Click on the paste button exactly 122 times. </li>
                         <li>Click the erase button, then the paste button. If twlnf doesn't appear, ensure your SD card is formatted as FAT32, and that booting to Calender mode is disabled in Flipnote Studio's settings.</li>
-                        <li>You are now in twlnf. When prompted, press (X) to mount the NAND directly. <em>(twlnf does not list this as an option.)</em></li>
+                        <li>You are now in twlnf. If prompted, press (A) to create a NAND backup. This will take a few minutes.</li>
+                        <li>When prompted, press (X) to mount the NAND directly. <em>(twlnf does not list this as an option.)</em></li>
                     </ol>
                     <h4 id="section-ii--installing-entrypoint">Section II - Installing your Permanent Entrypoint</h4>
                     <ol>
