--- a/install-v1.4.html
+++ b/install-v1.4.html
@@ -141,11 +141,8 @@
                     <h3 id="what-you-need">What you need</h3>
 
                     <ul id="files">
-                        <li data-name="dsisrl">The latest release of <a href="files/dsi_srl_extract.zip">DSi SRL Extractor (with console_id.py)</a> </li>
-                        <li>A twlnf firmware v1.4 installation script for your region (<a href="https://cdn.rawgit.com/jerbear64/twlguide/master/files/install-1.4-USA.nfs">USA</a> or <a href="https://cdn.rawgit.com/jerbear64/twlguide/master/files/install-1.4-EUR.nfs">EUR</a>)</li>
-                        <li>The latest release of <a href="https://www.python.org/downloads/">Python 3</a></li>
                         <li data-name="nusdownloader">The latest release of <a href="files/NUSDownloader.zip">NUS Downloader (with sort.py)</a> </li>
-                        <li>Magic (∩ ͡° ͜ʖ ͡°)⊃━☆ﾟ<button id="download_btn">Waiting... (Please enable Javascript, this is an download consolidator!)</button></li>
+                        <li>A twlnf firmware v1.4 installation script for your region (<a href="https://cdn.rawgit.com/jerbear64/twlguide/master/files/install-1.4-USA.nfs">USA</a> or <a href="https://cdn.rawgit.com/jerbear64/twlguide/master/files/install-1.4-EUR.nfs">EUR</a>)</li>
                     </ul>
 
                     
@@ -155,15 +152,6 @@
                     <h4 id="section-i---gathering-files">Section I - Gathering the Necessary Files</h4>
 
                     <ol>
-                        <li>Power on your device.</li>
-                        <li>Go to System Settings &gt; Data Management &gt; System Memory &gt; Flipnote Studio (or any other DSiWare) &gt; Copy &gt; Yes, and then exit to the DSi Menu. <em>(If Data Management isn't appearing, open the DSi Shop, close it, and try again.)</em></li>
-                        <li>Power off your device, and insert the device's SD card into your computer. </li>
-                        <li>Copy the twlnf 1.4 installation script for your region to the root of your SD card.</li>
-                        <li>In <code class="highlighter-rouge">generic.zip</code>, copy <code class="highlighter-rouge">PC files</code> to your computer. Open your SD Card's drive, and navigate to Private &gt; DS &gt; Title. Copy your .bin file to your <code class="highlighter-rouge&quot;">SRL Extractor</code> directory. If multiple .bin files are present, only one needs to be copied.</li>
-                        <li>Open your SRL Extractor folder and double-click on <code class="highlighter-rouge">console_id.py</code> to run it. When prompted, press Enter. You will now see a console_id.txt file in the directory. <em>(Note: On Unix-based systems (Mac and Linux, for example), <a href="https://www.winehq.org/">WINE</a> is required for this script to run.)</em></li>
-                        <li>Copy <code class="highlighter-rouge">console_id.txt</code> to the root of your SD card.
-                        </li>
-                        <li>Remove the SD card from your computer, and insert it into the SD card slot on your DSi.</li>
 
                         <li>Power on your DSi, and open Flipnote Studio.</li>
                         <li>Press "View Flipnote", then "SD Card". </li>
@@ -179,7 +167,7 @@
                         <li>Click on the single right arrow (the next to last arrow icon) two times. You will see a new frame be created. </li>
                         <li>Click on the paste button exactly 122 times. </li>
                         <li>Click the erase button, then the paste button. If twlnf doesn't appear, ensure your SD card is formatted as FAT32, and that booting to Calender mode is disabled in Flipnote Studio's settings.</li>
-                        <li>You are now in twlnf. When prompted, press (A) to create a NAND backup. This will take a few minutes.</li>
+                        <li>You are now in twlnf. When prompted, if you haven't already made a NAND backup, press (A) to create a NAND backup. This will take a few minutes.</li>
                         <li>When the NAND backup is finished, press (B) to exit twlnf. This will power off your device.</li>
                     </ol>
                     <h4 id="section-ii---nus">Section II - Downloading v1.4 Files</h4>
@@ -198,6 +186,7 @@
                         <li>Select "Start NUS Download!"</li>
                         <li>Exit NUS Downloader, and run <code class=="highlighter-rouge">sort.py</code> to prepare the titles for installation. When prompted, press Enter.</li>
                         <li>You now have a new folder called <code class="highlighter-rouge">title</code> in your NUS Downloader directory. Copy this folder to the root of your SD card.</li>
+                        <li>Copy the twlnf installation script for your region to the root of your SD card.</li>
                         <li>Unplug your SD card, and insert it in your DSi.</li>
                     </ol>
                     <h4 id="section-iii-installing">Section III - Installing System Version 1.4</h4>
