--- a/install-entrypoint-(sudokuhax).html
+++ b/install-entrypoint-(sudokuhax).html
@@ -136,7 +136,7 @@
                     <p class="notice--info">We will now install install a permanent entrypoint.</p>
                     <p class="notice--warning">Make sure you have followed the <a href="get-started.html">Getting Started</a> page before proceeding.</p>
                     </p>
-                    <div class="notice--danger">There is a risk of bricking. Please ensure that all steps are followed correctly, and keep the NAND backup we have already created in a safe place.</div>
+                    <div class="notice--danger">There is a risk of bricking. Please ensure that all steps are followed correctly, and keep the NAND backup we will create in a safe place.</div>
                     <div class="notice--danger">Ensure that your DSi has at least 30 blocks free before proceeding or you WILL brick! This can be found in Settings -> Data Management -> System Memory.</div>
                     <p>To use the <a href="https://en.wikipedia.org/wiki/Magnet_URI_scheme">magnet</a> links on this page, you will need a torrent client like <a href="http://dev.deluge-torrent.org/wiki/Download">Deluge</a>.</p>
                     <h3 id="what-you-need">What you need</h3>
@@ -167,7 +167,8 @@
                         <li>Click on the single right arrow (the next to last arrow icon) two times. You will see a new frame be created. </li>
                         <li>Click on the paste button exactly 122 times. </li>
                         <li>Click the erase button, then the paste button. If twlnf doesn't appear, ensure your SD card is formatted as FAT32, and that booting to Calender mode is disabled in Flipnote Studio's settings.</li>
-                        <li>You are now in twlnf. When prompted, press (X) to mount the NAND directly. <em>(twlnf does not list this as an option.)</em></li>
+                        <li>You are now in twlnf. If prompted, press (A) to create a NAND backup. This will take a few minutes.</li>
+                        <li>When prompted, press (X) to mount the NAND directly. <em>(twlnf does not list this as an option.)</em></li>
                     </ol>
                     <h4 id="section-ii--installing-entrypoint">Section II - Installing your Permanent Entrypoint</h4>
                     <ol>
