--- a/install-v1.4.html
+++ b/install-v1.4.html
@@ -166,7 +166,7 @@
                         <li>Click on the film roll icon.</li>
                         <li>Click on the single right arrow (the next to last arrow icon) two times. You will see a new frame be created. </li>
                         <li>Click on the paste button exactly 122 times. </li>
-                        <li>Click the erase button, then the paste button. If twlnf doesn't appear, ensure your SD card is formatted as FAT32, and that booting to Calender mode is disabled in Flipnote Studio's settings.</li>
+                        <li>Click the erase button, then the paste button. If twlnf doesn't appear, ensure that booting to Calender mode is disabled in Flipnote Studio's settings.</li>
                         <li>You are now in twlnf. When prompted, if you haven't already made a NAND backup, press (A) to create a NAND backup. This will take a few minutes.</li>
                         <li>When the NAND backup is finished, press (B) to exit twlnf. This will power off your device.</li>
                     </ol>
