Add deprecation warning

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             <section class="page__content" itemprop="text">
                 <hr>
 
-                <p class="notice--warning">Please note: This guide is incomplete, due to some exploits (such as RocketLauncher) being unreleased. For now, we will walk you through installing firmware version 1.4 on your DSi, which is the firmware version required for RocketLauncher to function once it's released, as well as a homebrew entrypoint.</p>
+		<p class="notice--warning">This guide is deprecated. Please see <a href="https://dsi.cfw.guide">https://dsi.cfw.guide</a> instead.</p>
 
                 <div class="notice"><b>If you need help, ask the <a href="https://discord.gg/w4SKAr8">NDS(i)Brew Scene Discord server</a>!</b></div>
 
