redirect users to the new guide, this one is deprecated and has been for a while

--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
     </script>
     <!-- end SEO -->
 
+    <!-- this guide SUCKS get it out of here -->
+    <script>window.location = "https://dsi.cfw.guide";</script>
+
     <meta name="HandheldFriendly" content="True">
     <meta name="MobileOptimized" content="320">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -97,10 +100,11 @@
 
             </h1>
 
-            <p class="page__lead">A reasonably complete guide to DSi hacking, <br /> from stock to homebrew.<br />
+            <p class="page__lead">This guide is deprecated. Please proceed to dsi.cfw.guide<br />
             </p>
 
-            <p><a href="get-started.html" class="btn btn--light-outline btn--large">Get Started</a></p>
+            <p><a href="https://dsi.cfw.guide" class="btn btn--light-outline btn--large">Go to dsi.cfw.guide</a></p>
+            <!-- javascript should handle most redirects, this is just here to handle edge cases -->
 
         </div>
 
@@ -123,8 +127,6 @@
 
             <section class="page__content" itemprop="text">
                 <hr>
-
-		<p class="notice--warning">This guide is deprecated. Please see <a href="https://dsi.cfw.guide">https://dsi.cfw.guide</a> instead.</p>
 
                 <div class="notice"><b>If you need help, ask the <a href="https://discord.gg/w4SKAr8">NDS(i)Brew Scene Discord server</a>!</b></div>
 
