--- a/credits.html
+++ b/credits.html
@@ -7,6 +7,7 @@
     <!-- begin SEO -->
 
     <title>Credits - TWLguide</title>
+    <script>window.location = "https://dsi.cfw.guide";</script>
 
     <meta name="description" content="A reasonably complete guide to DSi hacking, from stock to homebrew.">
 
