--- a/faq.html
+++ b/faq.html
@@ -9,7 +9,7 @@
     <title>FAQ - TWLguide</title>
 
     <meta name="description" content="A reasonably complete guide to DSi hacking, from stock to homebrew.">
-
+    <script>window.location = "https://dsi.cfw.guide";</script>
     <meta property="og:locale" content="en_US">
     <meta property="og:site_name" content="twlguide">
     <meta property="og:title" content="twlguide">
