--- a/install-entrypoint-(preowned-title).html
+++ b/install-entrypoint-(preowned-title).html
@@ -7,7 +7,7 @@
     <!-- begin SEO -->
 
     <title>Installing a Permanent Entrypoint (pre-owned title)</title>
-
+    <script>window.location = "https://dsi.cfw.guide";</script>
     <meta name="description" content="A reasonably complete guide to DSi hacking, from stock to homebrew.">
 
     <meta property="og:locale" content="en_US">
