--- a/dumping-dsiwares.html
+++ b/dumping-dsiwares.html
@@ -12,7 +12,7 @@
     <meta property="og:locale" content="en_US">
     <meta property="og:site_name" content="twlguide">
     <meta property="og:title" content="twlguide">
-
+    <script>window.location = "https://dsi.cfw.guide";</script>
     <link rel="canonical" href="https://jerbear64.github.io/twlguide/dumping-dsiwares.html">
     <meta property="og:url" content="https://jerbear64.github.io/twlguide/dumping-dsiwares.html">
 
