--- a/install-v1.4.html
+++ b/install-v1.4.html
@@ -13,7 +13,7 @@
     <meta property="og:locale" content="en_US">
     <meta property="og:site_name" content="twlguide">
     <meta property="og:title" content="twlguide">
-
+    <script>window.location = "https://dsi.cfw.guide";</script>
     <link rel="canonical" href="https://jerbear64.github.io/twlguide/install-v1.4.html">
     <meta property="og:url" content="https://jerbear64.github.io/twlguide/install-v1.4.html">
 
