--- a/troubleshooting.html
+++ b/troubleshooting.html
@@ -20,7 +20,7 @@
 
 <meta name="description" content="A reaonsably complete guide to DSi hacking, from stock to homebrew.">
 
-
+<script>window.location = "https://dsi.cfw.guide";</script>
 
 
 <meta property="og:locale" content="en_US">
